WIP support user-addon
